kubernetes/tech/applications/goaway/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: goaway
  namespace: goaway
  labels:
    app: goaway

spec:
  replicas: 1
  selector:
    matchLabels:
      app: goaway
  template:
    metadata:
      labels:
        app: goaway
    spec:
      containers:
        - name: goaway
          image: pommee/goaway:0.63.14
          imagePullPolicy: Always
          ports:
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
                - NET_RAW
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: data
              mountPath: /app/data

      volumes:
        - name: config
          configMap:
            name: config
        - name: data
          persistentVolumeClaim:
            claimName: goaway-data
