kubernetes/tech/applications/goaway/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: goaway
  namespace: goaway
  labels:
    app: goaway

spec:
  type: ClusterIP
  selector:
    app: goaway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service

metadata:
  name: dns
  namespace: goaway
  labels:
    app: goaway

spec:
  type: NodePort
  selector:
    app: goaway
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
      nodePort: 53
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
      nodePort: 53
